[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-sim-framework"
version = "0.1.0"
description = "Framework-style SimPy weekly schedule execution simulator for batch job shops."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "simpy>=4.1,<5",
  "plotly>=5.0",
]

[tool.setuptools]
packages = ["factory_sim"]
